<resources>
    <string name="app_name">KotlinExcersice</string>
    <string name="button_to_cycle">1. To life Cycle Events</string>
    <string name="button_to_click">2. To Click Events</string>
    <string name="button_to_android_extensions">3. To Kotlin Android Extensions</string>
    <string name="button_to_picasso">4. To Picasso</string>
    <string name="button_to_list_view">5. To List View</string>
    <string name="button_to_intents">6. To Intents</string>
    <string name="button_to_permissions">7. To Permissions</string>
    <string name="button_to_shared_preference">8. To Shared Preferences</string>
    <string name="button_to_extension_functions">9. To Extension Functions</string>
    <string name="button_click_xml">Click By XML</string>
    <string name="button_click_line">Click In Line</string>
    <string name="button_multi_1">Multiple Buttons 1</string>
    <string name="button_multi_2">Multiple Buttons 2</string>
    <string name="button_multi_3">Multiple Buttons 3</string>
    <string name="button_by_id">Button by Id</string>
    <string name="button_by_kat">Button by KAT</string>
    <string name="btn_intent_extras">Intent with Extras</string>
    <string name="btn_intent_flags">Intent with Flags</string>
    <string name="btn_intent_object">Intent with Object</string>
    <string name="title_activity_intent_extras">IntentExtrasActivity</string>
    <string name="btn_back">Go Back</string>
    <string name="btn_photo">Take a Picture</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_age">Age</string>
    <string name="btn_shared">Guardar</string>
    <string name="ext_btn_toast">Toast</string>
    <string name="ext_btn_snack">Snackbar</string>
    <string name="ext_btn_load">Load by URL</string>
    <string name="ext_btn_go">Go to Activity</string>
</resources>
